<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ForecastApp</string>

    <string name="today">Today</string>
    <string name="text_7_days">7 Days</string>
    <string name="settings">Settings</string>
    <string name="loading" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="celcius">°C</string>
    <string name="farenheit">°F</string>
    <string name="blank_templerature">%1$.1f%2$s</string>
    <string name="min_max_templerature">Min %1$.1f%2$s - Max %3$.2f%4$s</string>
    <string name="feels_like">Feels like %1$.1f%2$s</string>
    <string name="millimeters">mm</string>
    <string name="inches">in</string>
    <string name="preciptiation">Precipitation: %1$.1f %2$s</string>
    <string name="kilometers_per_hour">kph</string>
    <string name="miles_per_hour">mph</string>
    <string name="wind">Wind: %1$s, %2$.1f %3$s</string>
    <string name="wind_max_speed">Wind speed: %1$.1f %2$s</string>
    <string name="kilometers">km</string>
    <string name="miles">mi.</string>
    <string name="visibility">Visibility: %1$.1f %2$s</string>
    <string name="location_warning_toast_msg">Please, set location manually in settings</string>
    <string name="uv">UV: %1$.1f</string>

    <!--Settings-->
    <string name="weather_location">Weather Location</string>
    <string name="use_device_location">Use device location</string>
    <string name="allow_app_to_get_your_location">Allow the app to get your location</string>
    <string name="location">Location</string>
    <string name="location_weather_is_displayed">The location for which the weather is displayed</string>
    <string name="units">Units</string>
    <string name="unit_system">Unit system</string>

    <string name="appwidget_text">25.0 C</string>
    <string name="add_widget">Add widget</string>

</resources>
