<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/weather_location">
        <SwitchPreference
                android:key="USE_DEVICE_LOCATION"
                android:title="@string/use_device_location"
                android:summary="@string/allow_app_to_get_your_location"
                android:defaultValue="true"
                android:disableDependentsState="true"/>

        <EditTextPreference
                android:key="CUSTOM_LOCATION"
                android:title="@string/location"
                android:summary="@string/location_weather_is_displayed"
                android:defaultValue="Madrid"
                android:dependency="USE_DEVICE_LOCATION"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/units">
        <ListPreference
                android:key="UNIT_SYSTEM"
                android:title="@string/unit_system"
                android:summary="%s"
                android:defaultValue="METRIC"
                android:entries="@array/unitSystemEntries"
                android:entryValues="@array/unitSystemValues"/>
    </PreferenceCategory>
</PreferenceScreen>